--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^4.11.0",
     "next": "13.0.3",
+    "next-auth": "3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
